@@ -1,3 +1,2 @@
-* Extract Activatable tests from Confirmable
 * Move integration tests to Capybara
 * Better ORM integration
